--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>{{ post.title }}</h1>
-<p>{{ post.body }}</p>
+    <h1>{{ post.title }}</h1>
+    <p>{{ post.body }}</p>
+    {% if current_user.is_authenticated and current_user.id == post.user_id %}
+        <a href="{{ url_for('routes.edit_post', id=post.id) }}">Edit</a>
+        <form action="{{ url_for('routes.delete_post', id=post.id) }}" method="POST" style="display:inline;">
+            <button type="submit">Delete</button>
+        </form>
+    {% endif %}
 {% endblock %}
+
